--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@babel/register": "^7.0.0",
     "@graphql-codegen/cli": "^1.17.10",
     "@graphql-codegen/introspection": "^1.18.0",
+    "@material-ui/core": "^4.11.0",
     "@next/bundle-analyzer": "^9.5.5",
     "@prisma-cms/performance": "latest",
     "@testing-library/react": "^10.0.1",
@@ -129,6 +130,7 @@
     "lint-staged": "^10.0.10",
     "lodash": "^4.17.20",
     "mocha": "^5.2.0",
+    "moment-locales-webpack-plugin": "^1.2.0",
     "next-transpile-modules": "^4.1.0",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.2",
