--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,5 +29,5 @@
   },
   "typeRoots": ["./node_modules/@types", "./types"],
   "exclude": ["./node_modules", "dist", ".next", "out", "next.config.js"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
+  "include": ["next-env.d.ts", ".storybook/*.tsx", "**/*.ts", "**/*.tsx"]
 }
