--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "analyze": "yarn source-map-explorer 'build/static/js/*.js'",
     "get-api-schema": "graphql get-schema -o src/schema/generated/api.graphql",
     "build-api-fragments": "node --experimental-modules src/server/scripts/deploy/build-api-fragments",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
     "test:old": "react-scripts test --env=jsdom",
     "test-server": "NODE_OPTIONS=\"--experimental-modules\" yarn mocha --delay src/__tests__/server/index.js",
     "eject": "react-scripts eject",
@@ -65,6 +67,7 @@
     "@prisma-cms/user-module": "latest",
     "@prisma-cms/webrtc": "latest",
     "@prisma-cms/webrtc-module": "latest",
+    "@storybook/react": "^6.0.28",
     "apollo-cache-inmemory": "^1.3.7",
     "apollo-client": "^2.6.10",
     "apollo-cms": "^1.11.1",
@@ -85,6 +88,7 @@
     "monaco-editor": "^0.18.1",
     "mongodb": "^3.4.1",
     "next": "^10.0.0",
+    "next-seo": "^4.15.0",
     "node-less-chokidar": "^0.3.1",
     "node-sass-chokidar": "^1.1.0",
     "prisma-binding": "^2.1.6",
@@ -109,6 +113,9 @@
     "@graphql-codegen/typescript-react-apollo": "^2.0.7",
     "@next/bundle-analyzer": "^9.5.5",
     "@prisma-cms/performance": "latest",
+    "@storybook/addon-actions": "^6.0.28",
+    "@storybook/addon-docs": "^6.0.28",
+    "@storybook/addon-links": "^6.0.28",
     "@testing-library/react": "^10.0.1",
     "@testing-library/react-hooks": "^3.4.2",
     "@types/express": "^4.17.8",
