--- a/package.json
+++ b/package.json
@@ -164,6 +164,7 @@
     "nodemon": "^2.0.4",
     "prettier": "^2.0.2",
     "react-test-renderer": "^16.13.1",
+    "sass-loader": "^10.0.5",
     "source-map-explorer": "^2.0.1",
     "terser": "3.14.1",
     "ts-jest": "^26.4.3",
