--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": false,
   "scripts": {
     "dev": "nodemon",
-    "generate:types": "NODE_PATH=./ ts-node -P tsconfig.server.json src/modules/gql/cli/generateTypes/run",
+    "generate:types": "NODE_PATH=./ ts-node -P tsconfig.server.json src/next/src/modules/gql/cli/generateTypes/run",
     "build": "next build && tsc --project tsconfig.server.json",
     "build:analyze": "ANALYZE=true yarn build",
     "start": "cross-env NODE_ENV=production node dist/server/index.js",
@@ -45,9 +45,9 @@
   "dependencies": {
     "@apollo/client": "^3.2.5",
     "@modxclub/import-old-site": "latest",
-    "@prisma-cms/component": "latest",
+    "@prisma-cms/component": "^2.0.0",
     "@prisma-cms/connector": "latest",
-    "@prisma-cms/context": "1.3.2",
+    "@prisma-cms/context": "^2.0.3",
     "@prisma-cms/cooperation": "latest",
     "@prisma-cms/cooperation-module": "latest",
     "@prisma-cms/editor": "latest",
@@ -75,10 +75,9 @@
     "@prisma-cms/user-module": "latest",
     "@prisma-cms/webrtc": "latest",
     "@prisma-cms/webrtc-module": "latest",
-    "@storybook/react": "^6.0.28",
     "apollo-cache-inmemory": "^1.3.7",
     "apollo-client": "^2.6.10",
-    "apollo-cms": "^1.11.1",
+    "apollo-cms": "^2.0.0",
     "apollo-link-dedup": "1.0.15",
     "apollo-link-http": "1.5.5",
     "apollo-link-ws": "^1.0.20",
@@ -124,6 +123,7 @@
     "@storybook/addon-actions": "^6.0.28",
     "@storybook/addon-docs": "^6.0.28",
     "@storybook/addon-links": "^6.0.28",
+    "@storybook/react": "^6.0.28",
     "@testing-library/react": "^10.0.1",
     "@testing-library/react-hooks": "^3.4.2",
     "@types/express": "^4.17.8",
@@ -173,12 +173,13 @@
     "typescript-styled-plugin": "^0.15.0"
   },
   "resolutions": {
-    "apollo-cms": "^1.11.1",
+    "apollo-cms": "^2.0.0",
     "graphql": "^15.3.0",
     "graphql-config": "^3.0.3",
     "monaco-editor": "^0.18.1",
     "sha3": "^2.0.7",
-    "@prisma-cms/context": "1.3.2",
+    "@prisma-cms/component": "^2.0.0",
+    "@prisma-cms/context": "^2.0.3",
     "terser": "3.14.1",
     "react-dnd": "7.0.2",
     "react-router": "4.3.1",
