--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "@prisma-cms/prisma-cms.com",
   "version": "4.3.0",
   "description": "Opensource framework CMS powered by GraphQL, Prisma, MySQL, React & Apollo GraphQL",
-  "private": false,
+  "private": true,
+  "workspaces": [
+    "packages/@prisma-cms/context",
+    "packages/@prisma-cms/component",
+    "packages/apollo-cms"
+  ],
   "scripts": {
     "dev": "nodemon",
     "generate:types": "NODE_PATH=./ ts-node -P tsconfig.server.json src/next/src/modules/gql/cli/generateTypes/run",
@@ -75,12 +80,6 @@
     "@prisma-cms/user-module": "latest",
     "@prisma-cms/webrtc": "latest",
     "@prisma-cms/webrtc-module": "latest",
-    "apollo-cache-inmemory": "^1.3.7",
-    "apollo-client": "^2.6.10",
-    "apollo-cms": "^2.0.0",
-    "apollo-link-dedup": "1.0.15",
-    "apollo-link-http": "1.5.5",
-    "apollo-link-ws": "^1.0.20",
     "cheerio": "^1.0.0-rc.2",
     "csstype": "^3.0.4",
     "graphql": "^15.3.0",
@@ -99,7 +98,8 @@
     "node-less-chokidar": "^0.3.1",
     "node-sass-chokidar": "^1.1.0",
     "prisma-binding": "^2.1.6",
-    "react": "^16",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-monaco-editor": "^0.32.1",
     "react-number-format": "^4.0.6",
     "react-reflex": "^3.0.20",
@@ -173,14 +173,16 @@
     "typescript-styled-plugin": "^0.15.0"
   },
   "resolutions": {
+    "@prisma-cms/component": "^2.0.0",
+    "@prisma-cms/context": "^2.0.3",
     "apollo-cms": "^2.0.0",
     "graphql": "^15.3.0",
     "graphql-config": "^3.0.3",
     "monaco-editor": "^0.18.1",
     "sha3": "^2.0.7",
-    "@prisma-cms/component": "^2.0.0",
-    "@prisma-cms/context": "^2.0.3",
     "terser": "3.14.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-dnd": "7.0.2",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
