--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "workspaces": [
     "packages/@prisma-cms/context",
     "packages/@prisma-cms/component",
+    "packages/@prisma-cms/editor",
     "packages/apollo-cms"
   ],
   "scripts": {
@@ -49,36 +50,24 @@
   },
   "dependencies": {
     "@apollo/client": "^3.2.5",
-    "@modxclub/import-old-site": "latest",
     "@prisma-cms/component": "^2.0.0",
-    "@prisma-cms/connector": "latest",
     "@prisma-cms/context": "^2.0.3",
-    "@prisma-cms/cooperation": "latest",
     "@prisma-cms/cooperation-module": "latest",
-    "@prisma-cms/editor": "latest",
-    "@prisma-cms/ethereum": "latest",
+    "@prisma-cms/editor": "^2.0.0",
     "@prisma-cms/ethereum-module": "latest",
-    "@prisma-cms/filters": "latest",
-    "@prisma-cms/front": "latest",
-    "@prisma-cms/front-editor": "latest",
-    "@prisma-cms/graphql-voyager": "latest",
     "@prisma-cms/log-module": "latest",
     "@prisma-cms/mail-module": "latest",
     "@prisma-cms/marketplace-module": "latest",
     "@prisma-cms/mc.js-module": "latest",
     "@prisma-cms/prisma-module": "latest",
     "@prisma-cms/prisma-processor": "latest",
-    "@prisma-cms/resource": "latest",
     "@prisma-cms/resource-module": "latest",
     "@prisma-cms/router-module": "latest",
     "@prisma-cms/server": "latest",
     "@prisma-cms/sms-module": "latest",
-    "@prisma-cms/society": "latest",
     "@prisma-cms/society-module": "latest",
-    "@prisma-cms/ui": "latest",
     "@prisma-cms/upload-module": "latest",
     "@prisma-cms/user-module": "latest",
-    "@prisma-cms/webrtc": "latest",
     "@prisma-cms/webrtc-module": "latest",
     "cheerio": "^1.0.0-rc.2",
     "csstype": "^3.0.4",
@@ -92,11 +81,8 @@
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.23",
     "monaco-editor": "^0.18.1",
-    "mongodb": "^3.4.1",
     "next": "^10.0.0",
     "next-seo": "^4.15.0",
-    "node-less-chokidar": "^0.3.1",
-    "node-sass-chokidar": "^1.1.0",
     "prisma-binding": "^2.1.6",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
@@ -133,6 +119,7 @@
     "@types/node": "^13.9.5",
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.9",
+    "@types/react-jss": "^8.6.1",
     "@types/styled-components": "^5.1.4",
     "@types/urijs": "^1.19.12",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
@@ -161,6 +148,8 @@
     "mocha": "^5.2.0",
     "moment-locales-webpack-plugin": "^1.2.0",
     "next-transpile-modules": "^4.1.0",
+    "node-less-chokidar": "^0.3.1",
+    "node-sass-chokidar": "^1.1.0",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.2",
     "react-test-renderer": "^16.13.1",
@@ -184,6 +173,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-dnd": "7.0.2",
+    "react-jss": "^8.6.1",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
     "apollo-link-dedup": "1.0.15"
