--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,15 @@
 {
   "presets": ["next/babel"],
   "plugins": [
-    [
-      "babel-plugin-styled-components",
-      {
-        // In some projects missed namespace for styled-components
-        // По какой-то причине в styled пустой неймспейс и в тестах не проходит маска
-        // /^(\w+(-|_))?sc-/.test(className)
-        "namespace": "sc-",
-        "ssr": true
-      }
-    ]
+    // [
+    //   "babel-plugin-styled-components",
+    //   {
+    //     // In some projects missed namespace for styled-components
+    //     // По какой-то причине в styled пустой неймспейс и в тестах не проходит маска
+    //     // /^(\w+(-|_))?sc-/.test(className)
+    //     "namespace": "sc-",
+    //     "ssr": true
+    //   }
+    // ]
   ]
 }
