--- a/package.json
+++ b/package.json
@@ -66,11 +66,13 @@
     "@prisma-cms/server": "latest",
     "@prisma-cms/sms-module": "latest",
     "@prisma-cms/society-module": "latest",
+    "@prisma-cms/timeline": "^1.4.1",
     "@prisma-cms/upload-module": "latest",
     "@prisma-cms/user-module": "latest",
     "@prisma-cms/webrtc-module": "latest",
     "cheerio": "^1.0.0-rc.2",
     "csstype": "^3.0.4",
+    "ethereumjs-util": "^7.0.7",
     "graphql": "^15.3.0",
     "graphql-shield": "^7.3.0",
     "graphql-tag": "2.10.0",
@@ -112,6 +114,7 @@
     "@storybook/react": "^6.0.28",
     "@testing-library/react": "^10.0.1",
     "@testing-library/react-hooks": "^3.4.2",
+    "@types/ethereumjs-util": "^6.1.0",
     "@types/express": "^4.17.8",
     "@types/glob": "^7.1.3",
     "@types/jest": "^25.1.4",
