--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@prisma-cms/upload-module": "latest",
     "@prisma-cms/user-module": "latest",
     "@prisma-cms/webrtc-module": "latest",
+    "apollo-cms": "^2.0.0",
     "cheerio": "^1.0.0-rc.2",
     "csstype": "^3.0.4",
     "ethereumjs-util": "^7.0.7",
@@ -154,6 +155,7 @@
     "node-less-chokidar": "^0.3.1",
     "node-sass-chokidar": "^1.1.0",
     "nodemon": "^2.0.4",
+    "npm": "^6.14.8",
     "prettier": "^2.0.2",
     "react-test-renderer": "^16.13.1",
     "sass-loader": "^10.0.5",
