--- a/package.json
+++ b/package.json
@@ -154,6 +154,7 @@
     "node-less-chokidar": "^0.3.1",
     "node-sass-chokidar": "^1.1.0",
     "nodemon": "^2.0.4",
+    "npm": "^6.14.8",
     "prettier": "^2.0.2",
     "react-test-renderer": "^16.13.1",
     "sass-loader": "^10.0.5",
