--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "build-less": "node-less-chokidar src/styles/less",
     "start-ssr": "NODE_ENV=production node --experimental-modules src/ssr",
     "start-ssr-dev": "NODE_ENV=production PRISMA_CMS_TIMELOG=true nodemon src/ssr",
-    "start-server": "Sendmail=true node --experimental-modules src/server/",
-    "start-server-dev": "Sendmail=true SendmailTest=true nodemon --experimental-modules src/server/",
+    "start-server": "Sendmail=true yarn start",
+    "start-server-dev": "Sendmail=true SendmailTest=true yarn dev",
     "deploy": "yarn generate:types",
     "build-api": "node --experimental-modules src/server/scripts/deploy/api-only",
     "analyze": "yarn source-map-explorer 'build/static/js/*.js'",
@@ -169,6 +169,12 @@
   "resolutions": {
     "@prisma-cms/component": "^2.0.0",
     "@prisma-cms/context": "^2.0.3",
+    "@testing-library/react": "^10.0.1",
+    "@testing-library/react-hooks": "^3.4.2",
+    "ts-jest": "^26.4.3",
+    "jest": "^26.6.3",
+    "jest-styled-components": "^7.0.3",
+    "jest-watch-typeahead": "^0.5.0",
     "apollo-cms": "^2.0.0",
     "graphql": "^15.3.0",
     "graphql-config": "^3.0.3",
