--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "packages/@prisma-cms/context",
     "packages/@prisma-cms/component",
     "packages/@prisma-cms/editor",
+    "packages/@prisma-cms/query-builder",
+    "packages/@prisma-cms/uploader",
+    "packages/@prisma-cms/front-editor",
     "packages/apollo-cms"
   ],
   "scripts": {
@@ -52,9 +55,11 @@
     "@apollo/client": "^3.2.5",
     "@prisma-cms/component": "^2.0.0",
     "@prisma-cms/context": "^2.0.3",
+    "@prisma-cms/query-builder": "^2.0.0",
     "@prisma-cms/cooperation-module": "latest",
     "@prisma-cms/editor": "^2.0.0",
     "@prisma-cms/ethereum-module": "latest",
+    "@prisma-cms/front-editor": "^3.0.0",
     "@prisma-cms/log-module": "latest",
     "@prisma-cms/mail-module": "latest",
     "@prisma-cms/marketplace-module": "latest",
@@ -73,8 +78,9 @@
     "apollo-cms": "^2.0.0",
     "cheerio": "^1.0.0-rc.2",
     "csstype": "^3.0.4",
+    "css": "^3.0.0",
     "ethereumjs-util": "^7.0.7",
-    "graphql": "^15.3.0",
+    "graphql": "14.0.2",
     "graphql-shield": "^7.3.0",
     "graphql-tag": "2.10.0",
     "jss": "^10.4.0",
@@ -98,6 +104,8 @@
     "xml-writer": "^1.7.0"
   },
   "devDependencies": {
+    "@prisma-cms/uploader": "^2.0.0",
+    "@babel/core": "^7.7.7",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/polyfill": "^7.0.0",
     "@babel/register": "^7.0.0",
@@ -112,7 +120,7 @@
     "@next/bundle-analyzer": "^9.5.5",
     "@prisma-cms/performance": "latest",
     "@storybook/addon-actions": "^6.0.28",
-    "@storybook/addon-docs": "^6.0.28",
+    "@storybook/addon-docs": "^6.1.0",
     "@storybook/addon-links": "^6.0.28",
     "@storybook/react": "^6.0.28",
     "@testing-library/react": "^10.0.1",
@@ -161,6 +169,7 @@
     "prettier": "^2.0.2",
     "react-test-renderer": "^16.13.1",
     "sass-loader": "^10.0.5",
+    "scss-loader": "^0.0.1",
     "source-map-explorer": "^2.0.1",
     "terser": "3.14.1",
     "ts-jest": "^26.4.3",
@@ -171,14 +180,18 @@
   "resolutions": {
     "@prisma-cms/component": "^2.0.0",
     "@prisma-cms/context": "^2.0.3",
+    "@prisma-cms/query-builder": "^2.0.0",
+    "@prisma-cms/front-editor": "^3.0.0",
+    "@prisma-cms/uploader": "^2.0.0",
     "@testing-library/react": "^10.0.1",
     "@testing-library/react-hooks": "^3.4.2",
+    "css": "^3.0.0",
     "ts-jest": "^26.4.3",
     "jest": "^26.6.3",
     "jest-styled-components": "^7.0.3",
     "jest-watch-typeahead": "^0.5.0",
     "apollo-cms": "^2.0.0",
-    "graphql": "^15.3.0",
+    "graphql": "14.0.2",
     "graphql-config": "^3.0.3",
     "monaco-editor": "^0.18.1",
     "sha3": "^2.0.7",
