--- a/package.json
+++ b/package.json
@@ -21,37 +21,39 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@modxclub/import-old-site": "latest",
-    "@prisma-cms/component": "latest",
-    "@prisma-cms/connector": "latest",
+    "@modxclub/import-old-site": "1.3.5",
+    "@prisma-cms/component": "1.4.2",
+    "@prisma-cms/connector": "1.1.2",
     "@prisma-cms/context": "1.3.2",
-    "@prisma-cms/cooperation": "latest",
+    "@prisma-cms/cooperation": "1.13.2",
     "@prisma-cms/cooperation-module": "latest",
-    "@prisma-cms/editor": "latest",
-    "@prisma-cms/ethereum": "latest",
+    "@prisma-cms/editor": "1.6.3",
+    "@prisma-cms/ethereum": "1.3.5",
     "@prisma-cms/ethereum-module": "latest",
-    "@prisma-cms/filters": "latest",
-    "@prisma-cms/front": "latest",
-    "@prisma-cms/front-editor": "latest",
-    "@prisma-cms/graphql-voyager": "latest",
+    "@prisma-cms/filters": "1.7.0",
+    "@prisma-cms/front": "2.7.4",
+    "@prisma-cms/front-editor": "2.17.0",
+    "@prisma-cms/graphql-voyager": "1.1.2",
     "@prisma-cms/log-module": "latest",
     "@prisma-cms/mail-module": "latest",
     "@prisma-cms/marketplace-module": "latest",
     "@prisma-cms/mc.js-module": "latest",
     "@prisma-cms/prisma-module": "latest",
     "@prisma-cms/prisma-processor": "latest",
-    "@prisma-cms/resource": "latest",
+    "@prisma-cms/resource": "1.4.3",
     "@prisma-cms/resource-module": "latest",
     "@prisma-cms/router-module": "latest",
     "@prisma-cms/server": "latest",
     "@prisma-cms/sms-module": "latest",
-    "@prisma-cms/society": "latest",
+    "@prisma-cms/society": "1.5.2",
     "@prisma-cms/society-module": "latest",
-    "@prisma-cms/ui": "latest",
+    "@prisma-cms/ui": "1.2.4",
+    "@prisma-cms/uploader": "1.2.2",
     "@prisma-cms/upload-module": "latest",
     "@prisma-cms/user-module": "latest",
-    "@prisma-cms/webrtc": "latest",
+    "@prisma-cms/webrtc": "1.4.1",
     "@prisma-cms/webrtc-module": "latest",
+    "apollo-cms": "1.10.6",
     "apollo-cache-inmemory": "^1.3.7",
     "apollo-client": "^2.4.4",
     "apollo-link-dedup": "1.0.15",
@@ -91,9 +93,25 @@
     "terser": "3.14.1"
   },
   "resolutions": {
+    "@prisma-cms/context": "1.3.2",
+    "@modxclub/import-old-site": "1.3.5",
+    "@prisma-cms/component": "1.4.2",
+    "@prisma-cms/connector": "1.1.2",
+    "@prisma-cms/cooperation": "1.13.2",
+    "@prisma-cms/editor": "1.6.3",
+    "@prisma-cms/ethereum": "1.3.5",
+    "@prisma-cms/filters": "1.7.0",
+    "@prisma-cms/front": "2.7.4",
+    "@prisma-cms/front-editor": "2.17.0",
+    "@prisma-cms/graphql-voyager": "1.1.2",
+    "@prisma-cms/resource": "1.4.3",
+    "@prisma-cms/society": "1.5.2",
+    "@prisma-cms/ui": "1.2.4",
+    "@prisma-cms/uploader": "1.2.2",
+    "@prisma-cms/webrtc": "1.4.1",
+    "apollo-cms": "1.10.6",
     "monaco-editor": "^0.18.1",
     "sha3": "^2.0.7",
-    "@prisma-cms/context": "1.3.2",
     "graphql": "14.0.2",
     "terser": "3.14.1",
     "react-dnd": "7.0.2",
