--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "@storybook/react": "^6.0.28",
     "@testing-library/react": "^10.0.1",
     "@testing-library/react-hooks": "^3.4.2",
+    "@types/css": "^0.0.31",
     "@types/ethereumjs-util": "^6.1.0",
     "@types/express": "^4.17.8",
     "@types/glob": "^7.1.3",
