--- a/package.json
+++ b/package.json
@@ -54,6 +54,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.2.5",
+    "@babel/preset-env": "^7.12.10",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/standalone": "^7.12.10",
+    "@freecodecamp/loop-protect": "^2.2.1",
     "@prisma-cms/component": "^2.0.0",
     "@prisma-cms/context": "^2.0.3",
     "@prisma-cms/cooperation-module": "latest",
@@ -84,19 +88,20 @@
     "graphql": "^15.4.0",
     "graphql-shield": "^7.3.0",
     "graphql-tag": "2.10.0",
+    "jquery": "^3.4.1",
     "jss": "^10.4.0",
     "material-ui": "1.0.0-beta.43",
     "material-ui-icons": "^1.0.0-beta.17",
     "merge-graphql-schemas": "^1.7.8",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.23",
-    "monaco-editor": "^0.18.1",
+    "monaco-editor": "^0.20.0",
     "next": "^10.0.0",
     "next-seo": "^4.15.0",
     "prisma-binding": "^2.1.6",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-monaco-editor": "^0.32.1",
+    "react-monaco-editor": "^0.34.0",
     "react-number-format": "^4.0.6",
     "react-reflex": "^3.0.20",
     "slick-carousel": "1.8.1",
@@ -127,13 +132,17 @@
     "@storybook/react": "^6.0.28",
     "@testing-library/react": "^10.0.1",
     "@testing-library/react-hooks": "^3.4.2",
+    "@types/babel__standalone": "^7.1.3",
+    "@types/chai": "^4.2.14",
     "@types/css": "^0.0.31",
     "@types/ethereumjs-util": "^6.1.0",
     "@types/express": "^4.17.8",
     "@types/glob": "^7.1.3",
     "@types/jest": "^25.1.4",
+    "@types/jquery": "^3.5.5",
     "@types/lodash": "^4.14.161",
     "@types/node": "^13.9.5",
+    "@types/prismjs": "^1.16.2",
     "@types/prop-types": "^15.7.3",
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.9",
@@ -142,8 +151,10 @@
     "@types/urijs": "^1.19.12",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
+    "@zeit/next-css": "^1.0.1",
     "babel-jest": "^25.2.3",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "chai": "^4.2.0",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
@@ -165,6 +176,7 @@
     "lodash": "^4.17.20",
     "mocha": "^5.2.0",
     "moment-locales-webpack-plugin": "^1.2.0",
+    "monaco-editor-webpack-plugin": "^1.9.0",
     "next-transpile-modules": "^4.1.0",
     "node-less-chokidar": "^0.3.1",
     "node-sass-chokidar": "^1.1.0",
@@ -194,7 +206,7 @@
     "jest-styled-components": "^7.0.3",
     "jest-watch-typeahead": "^0.5.0",
     "apollo-cms": "^2.0.0",
-    "monaco-editor": "^0.18.1",
+    "monaco-editor": "^0.20.0",
     "sha3": "^2.0.7",
     "terser": "3.14.1",
     "react": "^16.14.0",
