--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "react-hooks", "deprecate"],
+  "plugins": ["@typescript-eslint", "react-hooks", "deprecate", "cypress"],
   "extends": [
+    "plugin:cypress/recommended",
     "eslint:recommended",
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
@@ -31,6 +32,7 @@
     }
   ],
   "rules": {
+    "cypress/no-unnecessary-waiting": "off",
     "react-hooks/rules-of-hooks": "error", // Проверяем правила хуков
     "react-hooks/exhaustive-deps": "error", // Проверяем зависимости эффекта
     "react/react-in-jsx-scope": 0,
