--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "types": "tsc --pretty --noEmit",
     "format": "prettier --write .",
     "lint": "eslint . --ext ts --ext tsx --ext js",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
     "test": "jest",
     "test:api": "TEST_REAL_API=true jest",
-    "test:all": "yarn lint && yarn types && yarn test",
+    "test:all": "yarn lint && yarn types && yarn cy:run && yarn test",
     "build-less": "node-less-chokidar src/styles/less",
     "start-ssr": "NODE_ENV=production node --experimental-modules src/ssr",
     "start-ssr-dev": "NODE_ENV=production PRISMA_CMS_TIMELOG=true nodemon src/ssr",
@@ -135,6 +137,7 @@
     "@types/babel__standalone": "^7.1.3",
     "@types/chai": "^4.2.14",
     "@types/css": "^0.0.31",
+    "@types/cypress": "^1.1.3",
     "@types/ethereumjs-util": "^6.1.0",
     "@types/express": "^4.17.8",
     "@types/glob": "^7.1.3",
@@ -156,9 +159,11 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "chai": "^4.2.0",
     "cross-env": "^7.0.2",
+    "cypress": "^6.2.0",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-deprecate": "^0.7.0",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^4.2.0",
