--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
     "chai": "^4.2.0",
     "cross-env": "^7.0.2",
     "cypress": "^6.2.0",
+    "cypress-graphql-mock-network": "^0.2.2",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
@@ -171,6 +172,7 @@
     "express": "^4.17.1",
     "glob": "^7.1.6",
     "graphql-config": "^3.0.3",
+    "graphql-tools": "^4.0.8",
     "http-proxy-middleware": "^1.0.6",
     "husky": "^4.2.3",
     "identity-obj-proxy": "^3.0.0",
@@ -207,6 +209,7 @@
     "@testing-library/react-hooks": "^3.4.2",
     "css": "^3.0.0",
     "ts-jest": "^26.4.3",
+    "graphql-tools": "^4.0.8",
     "jest": "^26.6.3",
     "jest-styled-components": "^7.0.3",
     "jest-watch-typeahead": "^0.5.0",
