--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@prisma-cms/mc.js-module": "latest",
     "@prisma-cms/prisma-module": "latest",
     "@prisma-cms/prisma-processor": "latest",
+    "@prisma-cms/query-builder": "^1.0.0",
     "@prisma-cms/resource": "1.4.3",
     "@prisma-cms/resource-module": "latest",
     "@prisma-cms/router-module": "latest",
@@ -48,35 +49,36 @@
     "@prisma-cms/society": "1.5.2",
     "@prisma-cms/society-module": "latest",
     "@prisma-cms/ui": "1.2.4",
-    "@prisma-cms/uploader": "1.2.2",
     "@prisma-cms/upload-module": "latest",
+    "@prisma-cms/uploader": "1.2.2",
     "@prisma-cms/user-module": "latest",
     "@prisma-cms/webrtc": "1.4.1",
     "@prisma-cms/webrtc-module": "latest",
-    "apollo-cms": "1.10.6",
     "apollo-cache-inmemory": "^1.3.7",
     "apollo-client": "^2.4.4",
+    "apollo-cms": "1.10.6",
     "apollo-link-dedup": "1.0.15",
     "apollo-link-http": "1.5.5",
     "cheerio": "^1.0.0-rc.2",
     "dotenv": "^8.1.0",
     "graphql": "14.0.2",
-    "graphql-tag": "2.10.0",
     "graphql-shield": "^7.3.0",
+    "graphql-tag": "2.10.0",
     "material-ui": "1.0.0-beta.43",
     "material-ui-icons": "^1.0.0-beta.17",
     "merge-graphql-schemas": "latest",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.23",
+    "monaco-editor": "^0.18.1",
     "mongodb": "^3.4.1",
     "node-less-chokidar": "^0.3.1",
     "node-sass-chokidar": "^1.1.0",
     "prisma-binding": "^2.1.6",
     "react-apollo": "^2.2.3",
-    "monaco-editor": "^0.18.1",
     "react-monaco-editor": "^0.32.1",
     "react-number-format": "^4.0.6",
     "react-reflex": "^3.0.20",
+    "sharp": "0.25.0",
     "urijs": "^1.19.1",
     "xml-writer": "^1.7.0"
   },
@@ -104,6 +106,7 @@
     "@prisma-cms/front": "2.7.4",
     "@prisma-cms/front-editor": "2.17.0",
     "@prisma-cms/graphql-voyager": "1.1.2",
+    "@prisma-cms/query-builder": "^1.0.0",
     "@prisma-cms/resource": "1.4.3",
     "@prisma-cms/society": "1.5.2",
     "@prisma-cms/ui": "1.2.4",
@@ -117,6 +120,7 @@
     "react-dnd": "7.0.2",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
+    "sharp": "0.25.0",
     "apollo-link-dedup": "1.0.15"
   },
   "eslintConfig": {
