--- a/package.json
+++ b/package.json
@@ -86,6 +86,8 @@
     "cheerio": "^1.0.0-rc.2",
     "css": "^3.0.0",
     "csstype": "^3.0.4",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "ethereumjs-util": "^7.0.7",
     "graphql": "^15.4.0",
     "graphql-shield": "^7.3.0",
@@ -137,6 +139,8 @@
     "@types/chai": "^4.2.14",
     "@types/css": "^0.0.31",
     "@types/cypress": "^1.1.3",
+    "@types/enzyme": "^3.10.8",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/ethereumjs-util": "^6.1.0",
     "@types/express": "^4.17.8",
     "@types/glob": "^7.1.3",
