--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "cheerio": "^1.0.0-rc.2",
     "css": "^3.0.0",
     "csstype": "^3.0.4",
+    "dom-scroll-into-view": "^1.2.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "ethereumjs-util": "^7.0.7",
