--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "react-dom": "^16.14.0",
     "react-monaco-editor": "^0.34.0",
     "react-number-format": "^4.0.6",
+    "react-slick": "0.24.0",
     "slick-carousel": "1.8.1",
     "styled-components": "^5.2.0",
     "uid": "^2.0.0",
@@ -155,6 +156,7 @@
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.9",
     "@types/react-jss": "^8.6.1",
+    "@types/react-slick": "^0.23.4",
     "@types/styled-components": "^5.1.4",
     "@types/urijs": "^1.19.12",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
