--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@prisma-cms/user-module": "latest",
     "@prisma-cms/webrtc-module": "latest",
     "apollo-cms": "^2.0.0",
+    "apollo-upload-client": "^14.1.3",
     "cheerio": "^1.0.0-rc.2",
     "css": "^3.0.0",
     "csstype": "^3.0.4",
@@ -138,6 +139,7 @@
     "@storybook/react": "^6.0.28",
     "@testing-library/react": "^10.0.1",
     "@testing-library/react-hooks": "^3.4.2",
+    "@types/apollo-upload-client": "^14.1.0",
     "@types/babel__standalone": "^7.1.3",
     "@types/chai": "^4.2.14",
     "@types/css": "^0.0.31",
